apps/meetly/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: meetly
  namespace: meetly
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: public
spec:
  ingressClassName: traefik
  rules:
    - host: meetly.czubinski.dev
      http:
        paths:
          - path: /sessions
            pathType: Prefix
            backend:
              service:
                name: meetly-backend
                port:
                  number: 8080
          - path: /session
            pathType: Prefix
            backend:
              service:
                name: meetly-backend
                port:
                  number: 8080
          - path: /health
            pathType: Prefix
            backend:
              service:
                name: meetly-backend
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: meetly-frontend
                port:
                  number: 3000
